<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:paddingTop="28dp"
            android:paddingBottom="28dp"
            android:background="@color/gray"
            android:weightSum="4">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_medium_56"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"

                >
                <TextView
                    android:id="@+id/ratingCountId"
                    style="@style/status_bar_text.value"
                    android:gravity="center"
                    android:text="@string/ratingCount"/>
                <TextView
                    android:id="@+id/ratingLabelId"
                    style="@style/status_bar_text"
                    android:text="@string/ratingLabel"/>
            </LinearLayout>

            <View style="@style/line.vertical"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/writtenCountId"
                    style="@style/status_bar_text.value"
                    android:text="@string/writtenCount"/>

                <TextView
                    android:id="@+id/writtenLabelId"
                    style="@style/status_bar_text"
                    android:text="@string/writtenLabel"/>
            </LinearLayout>

            <View style="@style/line.vertical"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/projectsCount"
                    style="@style/status_bar_text.value"
                    android:text="@string/projectsCount"/>

                <TextView
                    android:id="@+id/projectsLabelId"
                    style="@style/status_bar_text"
                    android:text="@string/projectsLabel"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/fields"
            android:layout_marginTop="8dp"
            >

            <ImageView
                android:id="@+id/lol"
                style="@style/icon.left"
                android:src="@drawable/ic_call_black_24dp"

                />

            <LinearLayout
                style="@style/inputWithHint"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editPhone"
                        style="@style/info_text"
                        android:hint="@string/hint_mobile"
                        android:text="@string/_phone"
                        >

                    </EditText>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"

                />
        </LinearLayout>

        <View
            style="@style/line.horizontal"
            />

        <LinearLayout
            style="@style/fields"
            >

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp"

                />

            <LinearLayout
                style="@style/inputWithHint"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editEmail"
                        style="@style/info_text"
                        android:hint="@string/hintEmail"
                        android:text="@string/textEmail"
                        >

                    </EditText>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/send_img"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"

                />
        </LinearLayout>

        <View
            style="@style/line.horizontal"
            />

        <LinearLayout
            style="@style/fields">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/vk"

                />

            <LinearLayout
                style="@style/inputWithHint"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editVk"
                        style="@style/info_text"
                        android:hint="@string/hintVk"
                        android:text="@string/textVk"
                        >

                    </EditText>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/open_vk_img"
                style="@style/icon.right"
                android:src="@drawable/ic_remove_red_eye_black_24dp"

                />
        </LinearLayout>

        <View
            style="@style/line.horizontal"
            />

        <LinearLayout
            style="@style/fields">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/git"

                />

            <LinearLayout
                style="@style/inputWithHint"

                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editGit"
                        style="@style/info_text"
                        android:hint="@string/hintRep"
                        android:text="@string/textRep"
                        android:layout_height="wrap_content"
                        >

                    </EditText>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/open_git_img"
                style="@style/icon.right"
                android:src="@drawable/ic_remove_red_eye_black_24dp"

                />
        </LinearLayout>

        <View
            style="@style/line.horizontal"
            />

        <LinearLayout
            style="@style/fields">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"

                />

            <LinearLayout
                style="@style/inputWithHint"
                android:layout_height="150dp"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editProfile"
                        style="@style/info_text"
                        android:paddingRight="16dp"
                        android:hint="@string/hintAbout"
                        android:text="@string/textAbout"
                        >

                    </EditText>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


        </LinearLayout>



    </LinearLayout>
</android.support.v4.widget.NestedScrollView>