<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MainActivity"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_conteiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:fitsSystemWindows="true"
            >

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/photo_size_256"
                    android:fitsSystemWindows="true">
                    <ImageView

                        android:id="@+id/user_photo_img"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/photo_size_256"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user"
                        />
                    <RelativeLayout
                        android:id="@+id/profile_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/gray_background"
                        android:visibility="gone">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_photo_hint"
                            android:textColor="@android:color/white"
                            android:fontFamily="sans-serif-medium"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="@dimen/margin_8"
                            android:layout_above="@+id/photo_placeholder"/>
                        
                        <ImageView
                            android:id="@+id/photo_placeholder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="84dp"
                            android:src="@drawable/ic_add_a_photo_24px"
                            />
                    </RelativeLayout>
                </FrameLayout>


                <android.support.v7.widget.Toolbar
                    android:theme="@style/AppTheme.PopupOverlay"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:titleTextColor="@color/white"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:paddingTop="28dp"
            android:paddingBottom="28dp"
            android:background="@color/gray"
            app:layout_behavior=".ui.behaviors.UserInfoBehavior"
            app:behavior_min_height="@dimen/size_medium_56"
            android:weightSum="4">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_medium_56"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"

                >
                <TextView
                    android:id="@+id/ratingCountId"
                    style="@style/status_bar_text.value"
                    android:gravity="center"
                    android:text="@string/ratingCount"/>
                <TextView
                    android:id="@+id/ratingLabelId"
                    style="@style/status_bar_text"
                    android:text="@string/ratingLabel"/>
            </LinearLayout>

            <View style="@style/line.vertical"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/writtenCountId"
                    style="@style/status_bar_text.value"
                    android:text="@string/writtenCount"/>

                <TextView
                    android:id="@+id/writtenLabelId"
                    style="@style/status_bar_text"
                    android:text="@string/writtenLabel"/>
            </LinearLayout>

            <View style="@style/line.vertical"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/projectsCount"
                    style="@style/status_bar_text.value"
                    android:text="@string/projectsCount"/>

                <TextView
                    android:id="@+id/projectsLabelId"
                    style="@style/status_bar_text"
                    android:text="@string/projectsLabel"/>

            </LinearLayout>
        </LinearLayout>


        <include layout="@layout/user_profile_content"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_create_black_24dp"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right"
            android:layout_marginRight="8dp"/>
</android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_layout"
        app:menu="@menu/drawer_menu"
        >

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>